--- a/src/pages/e-log/e-log.html
+++ b/src/pages/e-log/e-log.html
@@ -11,7 +11,7 @@
   <ion-navbar color="dark">
       <ion-title *ngIf="!isOn">    
           <button ion-button menuToggle="left" start>
-          <ion-icon name="menu"></ion-icon>Map 
+          <ion-icon name="menu"></ion-icon>Elog 
         </button></ion-title>
         <div id="search" class="search-button-star">
       <ion-searchbar *ngIf="isOn"  (ionCancel)="onCancel($event)" animated="true"></ion-searchbar>
@@ -31,17 +31,8 @@
 </ion-header>
 
 
-<ion-content>
-  <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
-      <ion-icon [name]="item.icon" item-start></ion-icon>
-      {{item.title}}
-      <div class="item-note" item-end>
-        {{item.note}}
-      </div>
-    </button>
-  </ion-list>
-  <div *ngIf="selectedItem" padding>
-    You navigated here from <b>{{selectedItem.title}}</b>
-  </div>
-</ion-content>
+<ion-content padding>
+<h1 style=" color: white;">Hello Elog</h1>
+</ion-content> 
+
+
