--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -32,5 +32,51 @@
 <ion-content padding>
  
    <h1 style=" color: white;">Hello Search</h1>
+
+   <ion-list>
+
+      <ion-item color="dark2">
+        <ion-label floating>Username</ion-label>
+        <ion-input type="text" [(ngModel)]="data.user_details['0'].user_name" ></ion-input>
+      </ion-item>
+  
+      <ion-item color="dark2">
+        <ion-label floating>Password</ion-label>
+        <ion-input type="password" [(ngModel)]="data.user_details['0'].password" required></ion-input>
+      </ion-item>
+
+      <ion-item color="dark2">
+          <ion-label floating>Email</ion-label>
+          <ion-input type="email" [(ngModel)]="data.user_details['0'].email" required></ion-input>
+        </ion-item>
+ 
+        <ion-item color="dark2">
+            <ion-label floating>Phone</ion-label>
+            <ion-input type="mobile" [(ngModel)]="data.user_details['0'].phone" required></ion-input>
+          </ion-item>
+    </ion-list>
+    <div padding>
+      <button ion-button color="primary" (click)="SignIn()">Sign In</button>
+    </div>
+
+
+      <form (submit)="doSubmit($event)" [formGroup]="langForm">
+    <ion-list radio-group formControlName="langs">
+
+      <ion-item>
+        <ion-label>Go</ion-label>
+        <ion-radio value="golang" checked="true"></ion-radio>
+      </ion-item>
+      <ion-item>
+        <ion-label>Rust</ion-label>
+        <ion-radio value="rust"></ion-radio>
+      </ion-item>
+      <ion-item>
+        <ion-label>Python</ion-label>
+        <ion-radio value="python"></ion-radio>
+      </ion-item>
+ 
+    </ion-list>
+  </form>
 </ion-content>
   
